libsql-server/src/http/user/snapshots/libsql_server__http__user__types__test__parse_positional_params.snap
---
source: libsql-server/src/http/user/types.rs
expression: found
---
{
  "Positional": [
    {
      "Integer": 1
    },
    {
      "Text": "hello"
    },
    {
      "Real": 12.1
    },
    {
      "Blob": [
        104,
        101,
        108,
        108,
        111,
        10
      ]
    },
    "Null"
  ]
}
